2002-11-12  Adam Fedor  <fedor@gnu.org>

	* ClassInformation.plist (NSDocument): Add _window outlet.
	* GormClassManager.m
	(-addClassNamed:withSuperClassNamed:withActions:withOutlets:):
	Fix typo - add class name not info to customClasses.
	* GormDocument.m ([GormDocument -parseHeader:]): Add ': back to
	action name.	

2002-11-07  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: +[GormDocument _replaceObjectsWithTemplates]: 
	needed to retain the template prevent corruption when 
	saving the data.
	
2002-11-06  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjectEditor.m: +[GormObjectEditor initialize]: Corrected 
	how the map table is created to prevent a crash. 

2002-11-06  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument createClassesFiles:] added if the simply return
	when no row is selected.  This was causing an exception.

2002-11-06  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument remove:] added if the simply return
	when no row is selected.  This was causing an exception.
	
2002-11-06  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormSoundEditor.m: Added missing file.
	
2002-11-05  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: added -[GormDocument openGModel:] to allow the
	loading of .gmodel files for conversion into .gorm files.
	* GormSoundInspector.m: Corrected a problem w/ deleting sounds which
	was causing a core dump.
	
2002-11-03  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added methods for class support
	-[GormDocument openSound:], -[GormDocument _createSoundPlaceHolder:].
	Modified -[GormDocument saveDocument], and
	-[GormDocument loadDocument] to handle copying of sounds into the 
	gorm file package when the .gorm is saved and registering them w/
	Gorm when the package is subsequently loaded.
	* GormPrivate.h: Added class declaration for GormSound, the